# jcommonpy

./: .env.development  .gitignore  AGENTS.md  README.md  basic  justfile  pyproject.toml
examples/: __init__.py  __main__.py  basic.config  basic.py  task-catfood.sh  task-litter.sh
openspec/changes/add-cliapp-class/: proposal.md
openspec/changes/add-cliapp-class/specs/cli-app/: spec.md
openspec/changes/add-string-interpolation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-25-implement-echo-module/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-08-implement-basic-usage/: design.md  proposal.md
openspec/changes/archive/2026-03-09-add-cliapp-class/: design.md  tasks.md
openspec/changes/archive/2026-03-09-add-command-module/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-add-config-path/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-add-dry-run-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-add-string-interpolation/: tasks.md
openspec/changes/implement-basic-usage/: design.md  proposal.md  tasks.md
openspec/specs/cli-app/: spec.md
openspec/specs/commands-module/: spec.md
openspec/specs/config-path/: spec.md
openspec/specs/diag-module/: spec.md
openspec/specs/echo/: spec.md
openspec/specs/jcli-builder/: spec.md
openspec/specs/string-interpolation/: spec.md
src/jcli/: __init__.py  cliapp.py  jcli.py
src/jcli/commands/: __init__.py
src/jcli/config/: __init__.py
src/jcli/diag/: __init__.py
src/jcli/echo/: __init__.py
tests/: README.md
tests/integration/: test_examples.py
tests/unit/: test_cliapp.py
tests/unit/test_commands/: test_commands.py
tests/unit/test_config/: test_config.py
tests/unit/test_diag/: test_diag.py
tests/unit/test_echo/: test_echo.py
tests/unit/test_jcli/: test_jcli.py
(+10 files in other folders)
