[project]
name = "jcli"
version = "0.1.0"
description = "Reusable modules for CLI applications"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PyYAML>=6.0",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = ["migrations", "tests/fixtures", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F",   # pycodestyle + pyflakes
    "W",        # warning
    "I",        # isort
    "B", "B9",  # bugbear
    "C4",       # comprehensions
    "UP",       # pyupgrade
    "SIM",      # simplify
    "ARG",      # unused arguments
    "PL",       # Pylint subset
    "RUF",      # Ruff-specific rules

]
ignore = [
    "E501",     # line too long → we trust black/ruff formatting
    "PLR2004",  # magic value comparison
    "ANN",      # avoid annotation pedantry
    "E701",     # Multiple statements on one line (colon)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
pythonpath = ["src"]                    # ← adds project/src/ to sys.path
addopts = [
    "--import-mode=importlib",          # modern import isolation (strongly preferred)
    "-ra",                              # show extra test summary on failure
    "--strict-markers",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
